<resources>
    <string name="app_name">Raseed</string>
    <string name="title_activity_zain">ZainActivity</string>
    <string name="title_activity_mtn">MtnActivity</string>
    <string name="title_activity_sudani">SudaniActivity</string>


    <!-- strings related to home screen -->
    <string name="choose">Choose Your SIM Card</string>
    <string name="zain">Zain</string>
    <string name="sudani">Sudani</string>
    <string name="mtn">MTN</string>

    <!-- strings for action buttons -->
    <string name="check">Check Balance</string>
    <string name="settings">Settings</string>
    <string name="recharge">Recharge</string>
    <string name="send">Send Balance</string>

    <!-- strings for text views -->
    <string name="data">Internet Bundles</string>
    <string name="talk">Talk Bundles</string>


    <string name="text_send">Send</string>
    <string name="text_check">Check Balance</string>
    <string name="text_settings">Settings</string>
    <string name="text_recharge">Recharge</string>

    <!-- balance sender strings -->
    <string name="password">Password</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="sendBalance">Send Balance</string>
    <string name="balance">Balance</string>
    <string name="title_activity_zain_sim">ZainSim</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CardNumber">Card Number</string>
    <string name="permission">Permission</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="title_activity_mtn_balance">MtnBalance</string>


</resources>
